# jupyter-react-widget-template

./: .gitignore  README.md  install.json  jupyter-react-widget-template.json  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  setup.cfg
.github/workflows/: publish.yaml
jupyter_react_widget_template/: __init__.py  constants.py  hooks.py  widget.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/components/: Widget.tsx
src/hooks/: model.ts
src/lib/: widget-model.ts
