[build-system]
requires = [
    "setuptools>=61.0.0",
    "hatchling>=1.3.1",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "jupyter_react_widget_template"
description = ""
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Cam Feenstra", email = "me@camfeenstra.com" },
]
version = "0.0.1.dev0"

keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "ipywidgets>=7.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "bump2version==1.*",
    "jupyterlab==4.*",
    "build>=1.0.0",
    "mypy>=1,<2",
    "twine"
]

[project.urls]
Homepage = "https://github.com/cfeenstra67/jupyter-react-widget-template"

[tool.hatch.build]
artifacts = [
    "jupyter_react_widget_template/nbextension",
    "jupyter_react_widget_template/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_react_widget_template/labextension/jupyter-react-widget-template" = "share/jupyter/labextensions/jupyter-react-widget-template"
"jupyter_react_widget_template/nbextension/jupyter-react-widget-template.js" = "share/jupyter/nbextensions/jupyter-react-widget-template.js"
"./install.json" = "share/jupyter/labextensions/jupyter-react-widget-template/install.json"
"./jupyter-react-widget-template.json" = "etc/jupyter/nbconfig/notebook.d/jupyter-react-widget-template.json"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_react_widget_template/nbextension/jupyter-react-widget-template.js",
    "jupyter_react_widget_template/labextension/jupyter-react-widget-template/package.json",
]
skip-if-exists = [
    "jupyter_react_widget_template/nbextension/jupyter-react-widget-template.js",
    "jupyter_react_widget_template/labextension/jupyter-react-widget-template/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = "pnpm"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
packages = ["jupyter_react_widget_template"]
disable_error_code = "import-untyped"
